--- a/RunningGame/Properties/Resources.resx
+++ b/RunningGame/Properties/Resources.resx
@@ -124,6 +124,9 @@
   <data name="dead" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\dead.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="edited_joystick" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\edited_joystick.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="fall1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\fall1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
