--- a/RunningGame/Properties/Resources.resx
+++ b/RunningGame/Properties/Resources.resx
@@ -121,6 +121,12 @@
   <data name="Agrabah_cropped" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Agrabah_cropped.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="buttonBlack" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\buttonBlack.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="buttonGreen" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\buttonGreen.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="dead" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\dead.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -138,6 +144,9 @@
   </data>
   <data name="fall4" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\fall4.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="joyStick" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\joyStick.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="jump1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\jump1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
